--- a/.github/workflows/continue.yml
+++ b/.github/workflows/continue.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm ci
       - name: Test code
         id: testID
-        contiune-on-error: true
+        continue-on-error: true
         run: npm run test
       - name: Upload test report
         uses: actions/upload-artifact@v3
