Fix error dinamic referente to artifact download

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Get Files
         uses: actions/download-artifact@v4
         with:
-          name: dist-files
+          name: ${{ inputs.artifact-namegit }}
       - name: Deploy Files
         run:  echo 'Deploying ... ...'
