--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,6 +7,9 @@ on:
         required: false
         default: dist
         type: string
+    secrets:
+      user-name:
+        required: true
 jobs:
   reuse-deploy:
     runs-on: ubuntu-latest
@@ -15,5 +18,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.artifact-name }}
+      - name: List files
+        run: ls
+      - name: List secret
+        if: user-name == 'mihai'
+        run: echo 'Found user-name  mihai '
       - name: Deploy Files
         run:  echo 'Deploying ... ...'
