Fix error : inside quotes

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -24,6 +24,6 @@ jobs:
         run: echo "USER_NAME=${{ secrets.user-name }}" >> $GITHUB_ENV
       - name: List secret
         if: ${{ env.USER_NAME == 'mihai' }}
-        run: echo 'Found user-name: mihai'
+        run: echo 'Found user-name mihai'
       - name: Deploy Files
         run:  echo 'Deploying ... ...'
