--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -26,6 +26,6 @@ jobs:
           USER_NAME: ${{ secrets.user-name }}
       - name: List secret
         if:  env.USER_NAME == 'mihai' 
-        run: echo 'Found user-name: mihai'
+        run: echo 'Found user-name  mihai'
       - name: Deploy Files
         run:  echo 'Deploying ... ...'
