--- a/.github/workflows/using-wf.yml
+++ b/.github/workflows/using-wf.yml
@@ -73,6 +73,12 @@ jobs:
       artifact-name: dist-files
     secrets:
         user-name: ${{ secrets.REUSESECRET }}
+  print-deploy-result:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print deploy outcome
+        run: echo "${{ needs.deploy.outputs.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
